--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-passport": "0.0.5",
+    "moment": "^2.24.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
